# TensorRTTemplate

./: .gitignore  CMakeLists.txt  README.md  example.cc  main.cc
TRTInfer/: TRTinfer.h  utility.h
pretrain/: yolov8n-seg.onnx  yolov8n.onnx
